--- a/artemis-hashcode.ipynb
+++ b/artemis-hashcode.ipynb
@@ -2,20 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 216,
    "metadata": {
     "collapsed": false,
     "scrolled": false
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/lib/python3.6/site-packages/ipykernel/__main__.py:37: FutureWarning: sort(columns=....) is deprecated, use sort_values(by=.....)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -27,6 +19,8 @@
     "R = params[2]\n",
     "C = params[3]\n",
     "X = params[4]\n",
+    "\n",
+    "caches = np.zeros(C) + 100\n",
     "\n",
     "videos = list (map (int , file.readline().split()))\n",
     "endpoints = []\n",
@@ -50,31 +44,366 @@
     "    for j in range (0 , E):\n",
     "        tagged_requests[i , j , 0] = i\n",
     "        tagged_requests[i , j , 1] = j\n",
-    "        tagged_requests[i , j , 2] = requests[i , j]\n",
+    "        tagged_requests[i , j , 2] = requests[i , j] * videos[i]\n",
     "        \n",
     "flat_tags = tagged_requests.reshape(V * E, 3)\n",
-    "sorted_requests = pd.DataFrame(flat_tags).sort(2)"
+    "sorted_requests = pd.DataFrame(flat_tags).sort_values(2, ascending=False).reset_index(drop=True)\n",
+    "endpoint_frames = list (map ((lambda x: pd.DataFrame(x).sort_values(1)) , endpoints))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 228,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n",
+      "11\n",
+      "12\n",
+      "13\n",
+      "14\n",
+      "15\n",
+      "16\n",
+      "17\n",
+      "18\n",
+      "19\n",
+      "20\n",
+      "21\n",
+      "22\n",
+      "23\n",
+      "24\n",
+      "25\n",
+      "26\n",
+      "27\n",
+      "28\n",
+      "29\n",
+      "30\n",
+      "31\n",
+      "32\n",
+      "33\n",
+      "34\n",
+      "35\n",
+      "36\n",
+      "37\n",
+      "38\n",
+      "39\n",
+      "40\n",
+      "41\n",
+      "42\n",
+      "43\n",
+      "44\n",
+      "45\n",
+      "46\n",
+      "47\n",
+      "48\n",
+      "49\n",
+      "50\n",
+      "51\n",
+      "52\n",
+      "53\n",
+      "54\n",
+      "55\n",
+      "56\n",
+      "57\n",
+      "58\n",
+      "59\n",
+      "60\n",
+      "61\n",
+      "62\n",
+      "63\n",
+      "64\n",
+      "65\n",
+      "66\n",
+      "67\n",
+      "68\n",
+      "69\n",
+      "70\n",
+      "71\n",
+      "72\n",
+      "73\n",
+      "74\n",
+      "75\n",
+      "76\n",
+      "77\n",
+      "78\n",
+      "79\n",
+      "80\n",
+      "81\n",
+      "82\n",
+      "83\n",
+      "84\n",
+      "85\n",
+      "86\n",
+      "87\n",
+      "88\n",
+      "89\n",
+      "90\n",
+      "91\n",
+      "92\n",
+      "93\n",
+      "94\n",
+      "95\n",
+      "96\n",
+      "97\n",
+      "98\n",
+      "99\n",
+      "100\n",
+      "101\n",
+      "102\n",
+      "103\n",
+      "104\n",
+      "105\n",
+      "106\n",
+      "107\n",
+      "108\n",
+      "109\n",
+      "110\n",
+      "111\n",
+      "112\n",
+      "113\n",
+      "114\n",
+      "115\n",
+      "116\n",
+      "117\n",
+      "118\n",
+      "119\n",
+      "120\n",
+      "121\n",
+      "122\n",
+      "123\n",
+      "124\n",
+      "125\n",
+      "126\n",
+      "127\n",
+      "128\n",
+      "129\n",
+      "130\n",
+      "131\n",
+      "132\n",
+      "133\n",
+      "134\n",
+      "135\n",
+      "136\n",
+      "137\n",
+      "138\n",
+      "139\n",
+      "140\n",
+      "141\n",
+      "142\n",
+      "143\n",
+      "144\n",
+      "145\n",
+      "146\n",
+      "147\n",
+      "148\n",
+      "149\n",
+      "150\n",
+      "151\n",
+      "152\n",
+      "153\n",
+      "154\n",
+      "155\n",
+      "156\n",
+      "157\n",
+      "158\n",
+      "159\n",
+      "160\n",
+      "161\n",
+      "162\n",
+      "163\n",
+      "164\n",
+      "165\n",
+      "166\n",
+      "167\n",
+      "168\n",
+      "169\n",
+      "170\n",
+      "171\n",
+      "172\n",
+      "173\n",
+      "174\n",
+      "175\n",
+      "176\n",
+      "177\n",
+      "178\n",
+      "179\n",
+      "180\n",
+      "181\n",
+      "182\n",
+      "183\n",
+      "184\n",
+      "185\n",
+      "186\n",
+      "187\n",
+      "188\n",
+      "189\n",
+      "190\n",
+      "191\n",
+      "192\n",
+      "193\n",
+      "194\n",
+      "195\n",
+      "196\n",
+      "197\n",
+      "198\n",
+      "199\n",
+      "200\n",
+      "201\n",
+      "202\n",
+      "203\n",
+      "204\n",
+      "205\n",
+      "206\n",
+      "207\n",
+      "208\n",
+      "209\n",
+      "210\n",
+      "211\n",
+      "212\n",
+      "213\n",
+      "214\n",
+      "215\n",
+      "216\n",
+      "217\n",
+      "218\n",
+      "219\n",
+      "220\n",
+      "221\n",
+      "222\n",
+      "223\n",
+      "224\n",
+      "225\n",
+      "226\n",
+      "227\n",
+      "228\n"
+     ]
+    }
+   ],
    "source": [
-    "sorted_requests"
+    "for i in range(0 , R):\n",
+    "    cache_list = endpoint_frames[sorted_requests.ix[i,1]]\n",
+    "    print(cache_list)\n",
+    "    for j in range(0 , len(cache_list.index)):\n",
+    "        if caches[cache_list.ix[0]] > videos[sorted_requests.ix[i,0]]:\n",
+    "            \n",
+    "    break"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 226,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>5059</td>\n",
+       "      <td>124</td>\n",
+       "      <td>1.76198e+07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1629</td>\n",
+       "      <td>368</td>\n",
+       "      <td>1.75687e+07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1115</td>\n",
+       "      <td>39</td>\n",
+       "      <td>1.73704e+07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4130</td>\n",
+       "      <td>556</td>\n",
+       "      <td>1.73213e+07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>9670</td>\n",
+       "      <td>706</td>\n",
+       "      <td>1.71971e+07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>6740</td>\n",
+       "      <td>556</td>\n",
+       "      <td>1.69516e+07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>1902</td>\n",
+       "      <td>62</td>\n",
+       "      <td>1.6888e+07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>8767</td>\n",
+       "      <td>460</td>\n",
+       "      <td>1.66596e+07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>3749</td>\n",
+       "      <td>201</td>\n",
+       "      <td>1.65915e+07</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      0    1            2\n",
+       "0  5059  124  1.76198e+07\n",
+       "1  1629  368  1.75687e+07\n",
+       "2  1115   39  1.73704e+07\n",
+       "3  4130  556  1.73213e+07\n",
+       "4  9670  706  1.71971e+07\n",
+       "5  6740  556  1.69516e+07\n",
+       "6  1902   62   1.6888e+07\n",
+       "7  8767  460  1.66596e+07\n",
+       "8  3749  201  1.65915e+07"
+      ]
+     },
+     "execution_count": 226,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sorted_requests[0:9]"
+   ]
   },
   {
    "cell_type": "code",
